--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
             <div class="d-flex flex-column flex-md-row tpmg">
               <a href="#">
-                <img src="./img/Google_btn.png" class="mx-1">
+                <img src="./img/Google_btn.png" class="mx-1 my-1">
               </a>
               <a href="#">
-                <img src="./img/Apple_btn.png" class="mx-1">
+                <img src="./img/Apple_btn.png" class="mx-1 my-1">
               </a>
             </div> 
         </div>
@@ -62,7 +62,7 @@
         <div class="col-2"></div>
 
         <div class="col-sm-3 col-lg-5 my-5 px-0">
-            <img src="./img/mockup01.png" width="470px" class="smImg">
+            <img src="./img/mockup01.png" width="470px" class="smImg mImg">
         </div>
       </div>      
   </div>
@@ -71,13 +71,13 @@
 
   <div class="container pushdown">
     <div class="row">
-      <div class="col-2 ">        
+      <div class="col-2  ">        
       </div>
-      <div class="col-2 ">
+      <div class="col-sm-2 col-lg-2">
         <img src="./img/secured_shield.png" width="150px">
       </div>
       <div class="col-1"></div>
-      <div class="col-5">
+      <div class="col-sm-5 col-lg-5">
         <h2 class="my-4">Your security is our priority</h2>
         <p class="mytxt">PiggyVest uses the highest level of Internet Security and it is secured by 256 bits SSL security encryption to ensure that your information is comepletely protected from fraud.</p>
         <button class="btn btn-primary">Read More</button>
@@ -90,14 +90,14 @@
   <div class="container pushdown">
     <div class="row">
       <div class="col-1 "></div>
-      <div class="col-5 my-auto">
+      <div class="my-auto  col-sm-2 col-lg-5">
         <h2 class="my-3">Disable Your Account Balance</h2>
         <p class="mytxt">PiggyVest uses the highest level of Internet Security and it is secured by 256 bits SSL security encryption to ensure that your information is comepletely protected from fraud.</p>
         <a href="#" class="btn btn-outline-primary py-2 px-4"><i class="bi bi-arrow-right-short"></i> Check it out</a>
       </div>
       <div class="col-2"></div>
-      <div class="col-4">
-        <img src="./img/mockup02.png" width="400px">
+      <div class="col-sm-2 col-lg-4">
+        <img src="./img/mockup02.png" width="400px" class="smImg">
       </div>
     </div>
   </div>
